--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,18 @@
     transform: rotate(360deg);
   }
 }
+
+button {
+  width: 100px;
+  margin-left: 20px;
+}
+
+button:not(disabled) {
+  color: white;
+  background-color: blue;
+  cursor: pointer;
+}
+
+li {
+  list-style-type: none;
+}
